[shenglong-electricv_1.0.0.1 2013-12-27 张春生]
1.webview loading view ActivityIndicatorStyle ActivityIndicator
2.submenu as one line
3.submenu highlight

[shenglong-electricv_1.0.0.1 2014-02-15 张春生]
1.新功能:更改tab菜单
2.新功能:调整tab菜单样式
3.新功能:增加tabView的click事件，改变activeTab
4.新功能:调整tabView的click事件，加载数据
5.新功能:调整tabView的click事件，更改子菜单
6.bug:主菜单切换，内容无法加载
7.bug:修复主菜单切换，内容无法加载的bug，两次beforeload，setUrl与reload均触发beforeload

[shenglong-electricv_1.0.0.1 2014-02-22 张春生]
1.新功能：增加左侧菜单返回功能
2.重构：更改launch image
3.新功能：保存submenu的activeIndex位置
4.新功能：增加下拉刷新功能
5.bug：弹出菜单从底部开始
6.bug：重新计算子菜单长度
7.bug：添加五大营数据

[shenglong-electricv_1.0.0.1 2014-02-28 张春生]
1.bug：iPhone5 webview should more far from the top,change the distance
2.bug：show load when read and render the data

[shenglong-electricv_1.0.0.1 2014-03-03 张春生]
1.bug：show load when read and render the data

[shenglong-electricv_1.0.0.1 2014-03-04 张春生]
1.重构：调整submenus样式和高度
2.重构：更改loading样式
3.重构：更改新闻列表样式
4.重构：更改首页样式
5.重构：更改列表页样式
6.重构：更改客户与成功案例页样式
7.需求变更：打开默认为新闻页

[shenglong-electricv_1.0.0.1 2014-03-06 张春生]
1.重构：增加判断是否显示加载窗口，如果是http请求则不显示加载提示
2.重构：增加banner配置信息
3.重构：调整菜单数据

[shenglong-electricv_1.0.0.1 2014-03-06 张春生]
1.重构：增加招聘数据
2.重构：增加banner数据
3.重构：调整咨询和反馈页面

[shenglong-electricv_1.0.0.1 2014-03-08 张春生]
1.重构：更新招聘页banner
2.重构：调整咨询和反馈button样式
3.重构：更新返回按钮点击区域
4.重构：调整下拉刷新功能，更新背景

[shenglong-electricv_1.0.0.1 2014-03-08 张春生]
1.重构：调整内容加载方式，使用setHtml方法

[shenglong-electricv_1.0.0.1 2014-03-13 张春生]
1.重构：创建模版文件
2.重构：继承模版文件
3.新功能：添加模版内容
4.新功能：增加模版调用方法
5.bug:修复样式不能加载

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[shenglong-electricv_1.0.0.1 2014-02-22 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本