@@ -63,6 +63,10 @@
 4.新功能：增加模版调用方法
 5.bug:修复样式不能加载
 
+[shenglong-electricv_1.0.0.1 2014-03-14 张春生]
+1.重构：解析banner内容
+2.重构：解析content内容
+
 --备注分类
 1、新功能：
 2、Bug:
